Fix broken CSS for code font
Both pre and code already set font-family. Since I don't want to
override font-size, remove the font: property altogether.

--- a/sass/tale/_code.scss
+++ b/sass/tale/_code.scss
@@ -22,7 +22,6 @@ pre code {
   color: inherit;
   border: 0;
   padding: 0;
-  font: $code-font;
 }
 
 .highlight {
