--- a/sass/tale/_variables.scss
+++ b/sass/tale/_variables.scss
@@ -16,8 +16,7 @@ $code-bg: #eef !default;
 $serif-primary: "Source Serif 4", "Source Serif Pro", 'Times New Roman', Times, "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei UI", "Microsoft YaHei", '微软雅黑', '思源黑体', SYHT, "WenQuanYi Micro Hei", serif !default;
 $serif-secondary: $serif-primary !default;
 $sans-serif: 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif !default;
-$monospaced: Menlo, Monaco, monospace !default;
-$code-font: $monospaced;
+$monospaced: Menlo, Monaco, "DejaVu Sans Mono", Consolas, monospace !default;
 
 @mixin box-sizing($type: border-box) {
   -webkit-box-sizing: $type;
